--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,12 @@
     "target": "ES2021",
     "module": "commonjs",
     "moduleResolution": "node",
-    // "ignoreDeprecations": "6.0",
     "outDir": "./dist",
     "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "generated/prisma"]
